--- a/client/src/index.html
+++ b/client/src/index.html
@@ -33,7 +33,8 @@
         </div>
     </div>
 
-    <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
     <script>
 
         // const socket = io('http://localhost:4000');
