some major changes

--- a/server/src/public/index.html
+++ b/server/src/public/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
+
     <title>chatroom</title>
 </head>
 <body>
@@ -22,23 +24,19 @@
             </div>
         </div>
         <div class="users">
-            <h3>users in this room</h3>
             <ul class="user-list">
-                <li>pawan</li>
-                <li>ankush</li>
-                <li>shubham</li>
-                <li>sagar</li>
-                <li>sanjay</li>
             </ul>
         </div>
     </div>
 
-    <!-- <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script> -->
-    <script src="/socket.io/socket.io.js"></script>
+</body>
+
+    <script src="/socket.io/socket.io.js"> </script>
     <script>
 
         // const socket = io('http://localhost:4000');
         const socket = io();
+
         const form = document.getElementById('form');
         const messageBody = document.querySelector('.messages');
 
@@ -79,5 +77,4 @@
 
     </script>
 
-</body>
 </html>
